--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            background-image: url("cit2.jpg");
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
         }
 
         .login-container {
